<resources>
    <string name="app_name">Flatmate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="rent">Rent</string>
    <string name="duties">Duties</string>
    <string name="shopping">Shopping</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password_confirm">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="rent_value_pln">%1$.2f PLN</string>
    <string name="rent_value_each">%1$.2f PLN each</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_message">Napisz wiadomość...</string>
    <string name="add_item">Add item</string>
    <string name="actual_balance">Actual balance</string>
    <string name="recent_shopping_items">Recent history</string>
    <string name="price">Price</string>
    <string name="item_name">Item name</string>
    <string name="buyer">Buyer</string>
    <string name="value">Value</string>
    <string name="duties_todo">To do</string>
    <string name="duties_history">History</string>
    <string name="duty_name">Duty</string>
    <string name="duty_value">Value</string>
    <string name="duty_doer">Doer</string>
    <string name="Kanal">channel_name</string>
    <string name="channel_name_rent">Rent Channel</string>
    <string name="channel_rent_description">Notifications about rent</string>
    <string name="channel_id_rent">RentChannel</string>
    <string name="channel_id_chat">ChatChannel</string>
    <string name="login">Login</string>
    <string name="buyer_s">Buyer(s)</string>
    <string name="divide_on">Divide on:</string>
    <string name="divie_into">Divie into:</string>
    <string name="pick_date">Pick date</string>
    <string name="save">save</string>
    <string name="me">Ja</string>
    <string name="logout">Logout</string>
    <string name="add_purchase">Add purhcase</string>
    <string name="pay_debt">Pay debt</string>
    <string name="to_whom">To whom?</string>
    <string name="how_much">How much?</string>
    <string name="pln">PLN</string>
    <string name="see_stats">See stats</string>
    <string name="add_duty">Add duty</string>
    <string name="channel_name_chat">Chat</string>
    <string name="channel_chat_description">Powiadomienia o nowej wiadomości</string>
    <string name="no_flat">You haven\'t got a flat yet</string>
    <string name="create_flat">Create</string>
    <string name="welcome">Welcome to Flatmate! Please enter your flat name to start a great adventure!</string>
    <string name="flat_name">Flat name</string>
    <string name="join_flat">Join</string>
    <string name="flat_code">Flat invitation code</string>
    <string name="join">Join flat</string>
    <string name="empty_login">Login nie może być pusty !</string>
    <string name="empty_password">Hasło nie może być puste !</string>
    <string name="empty_email">Email nie może być pusty !</string>
    <string name="empty_name">Imię nie może być puste !</string>
    <string name="different_passwords">Hasła nie mogą być różne !</string>
    <string name="too_short_password">Hasło musi zawierać co najmniej 8 znaków !</string>
    <string name="singup_correct">Zarejestrowano poprawnie. Zaloguj się.</string>
    <string name="singup_faild">Rejestracja nie powiodła się</string>
    <string name="login_in_use">Login jest już zajęty</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="buyer_colon">Buyer:</string>
    <string name="no_internet_error">Brak internetu</string>
    <string name="message_sending_error">Wysyłanie wiadomości nie powiodło się</string>
    <string name="empty_message_sending_error">Nie można wysłać pustej wiadomości</string>
    <string name="bad_login_or_password">Zly login lub haslo</string>
    <string name="rent_value_cannot_be_null">Rent value cannot be null</string>
    <string name="success">Success</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>

</resources>
