<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="30dp">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sing_up_login_edittext"
        android:hint="@string/login"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sing_up_password_edittext"
        android:hint="@string/password"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sing_up_password_confirm_edittext"
        android:hint="@string/password_confirm"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sing_up_email_textedit"
        android:hint="@string/email"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sing_up_first_name_edittext"
        android:hint="@string/first_name"
        android:layout_marginBottom="20dp"
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sing_up_last_name_edittex"
        android:hint="@string/last_name"
        android:layout_marginBottom="20dp"
        android:inputType="text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/sign_up"
        android:id="@+id/sign_up_button"/>


</LinearLayout>