<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ShoppingMainFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/actual_balance"
        android:padding="5dp"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/all_flatmates_balances"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:divider="@color/colorAccent"
        android:dividerHeight="0.5dp"></ListView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/recent_shopping_items"
        android:padding="5dp"
        android:textAlignment="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:layout_height="wrap_content"
            android:text="@string/item_name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/price"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:text="@string/buyer"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <ListView
            android:id="@+id/shopping_history_list_view"
            android:layout_width="match_parent"
            android:layout_height="147dp"></ListView>
    </FrameLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/add_shopping_item_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorButtons"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/add_purchase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pay_debt" />

        <Button
            android:id="@+id/pay_debt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorButtons"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/pay_debt"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_shopping_item_button"
            app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>


</LinearLayout>