<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AddShoppingItemFragment"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="308dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_item_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                android:inputType="text"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/new_item_price_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textAlignment="textStart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buyer_colon"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/users_spinner_buyer"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingStart="25dp"></Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/divie_into"
                android:textAlignment="center" />
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/users_checkboxes_list_view">
            </ListView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:id="@+id/pick_date_button"
                android:background="@color/colorAccent"/>
        </LinearLayout>

    </LinearLayout>



    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:textAlignment="center"
        android:visibility="invisible"
        android:id="@+id/shopping_date_picker"
        >

    </DatePicker>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:text="@string/save"
        android:id="@+id/save_item"
        android:background="@color/colorAccent"/>
</FrameLayout>



</LinearLayout>